# Plant-APP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml  migrations.yaml  mypy.yaml  test.yaml
src/: manage.py
src/authentication_service/: urls.py
src/authentication_service/migrations/: 0001_initial.py  0002_alter_usermodel_telephone.py
src/authentication_service/models/: __init__.py  user.py
src/authentication_service/repository/: __init__.py
src/authentication_service/serializers/: __init__.py  _user_base.py  login_user.py  register_user.py  reset_password.py
src/authentication_service/service/: __init__.py  _api_methods.py
src/authentication_service/views/: __init__.py  login.py  logout.py  register_user.py  reset_password.py  session_auth.py
src/email_service/: enums.py  exceptions.py  paths.py
src/email_service/dataclasses/: __init__.py  email_log.py
src/email_service/interfaces/: __init__.py  mail_generator.py
src/email_service/migrations/: 0001_initial.py  0002_remove_emaillogmodel_send_status.py  0003_emaillogmodel_send_status.py
src/email_service/models/: __init__.py  email_log.py
src/email_service/repositories/: __init__.py  email.py
src/email_service/service/: __init__.py  _mail_generator.py
src/email_service/templates/: confirm_sign_up.html
src/project/: api_response.py  dataclasses.py  settings.py  urls.py
src/project/repositories/: repository.py
tests/: test_example.py
tests/fixtures/integration/: __init__.py  _constants.py  _models.py  _patches.py  _payloads.py  _responses.py  _sendgrid_clients.py
tests/fixtures/unit/: __init__.py  _mail_generators.py  _patches.py  _sendgrid_clients.py
(+9 files in other folders)
